packages/rune/fixtures/corpus/invalid/non-missing-name.rune
[NON]
    a noun declaration that forgot to name its subject
